<resources>
    <string name="app_name">DrivingRecorder2</string>
       <string name="recorder_sound">录音</string>


    <string name="settings_title">设置</string>
    <string name="video_clarity">视频清晰度</string>
    <string name="length_of_each_video">每段录像时长</string>
    <string name="photo_clarity">照片清晰度</string>
    <string name="auto_take_picture">行车异常录制</string>

    <string name="video_clarity_min">720P</string>
    <string name="video_clarity_max">1080P</string>
    <string name="each_one_m">1分钟</string>
    <string name="each_two_m">2分钟</string>
    <string name="each_three_m">3分钟</string>

    <string name="photo_clarity_low">低</string>
    <string name="photo_clarity_mid">中</string>
    <string name="photo_clarity_high">高</string>

    <string name="auto_take_picture_close">关闭</string>
    <string name="auto_take_picture_mid">普通</string>
    <string name="auto_take_picture_high">灵敏</string>

    <string name="image_custom_title">录音</string>

    <string name="recorder_on">ON</string>
    <string name="recorder_off">OFF</string>
    <string name="take_photo">已保存照片成功</string>

    <string name="no_sdcard_warm">车机未插卡，不能录制视频</string>
    <string name="has_mounted_sdcard">已经插入SD卡，正在准备录制环境...</string>
    <string name="lock_file_full">存储卡空间不够，请手动清除加锁视频</string>
    <string name="auto_clean_file_failed">自动清除存储空间失败，请手动清除......</string>
    <string name="exception_file_full">Exception视频已满，请手动进行删除</string>
    <string name="sdcard_full">存储卡已满，删除文件失败，请手动删除</string>
    <string name="camera_preview_failed">摄像头预览头败</string>
    <string name="open_camera_fail">打开摄像头失败</string>
    <string name="create_videofile_fail">创建视频文件失败</string>
    <string name="start_recorder_failed">录制视频失败...</string>
    <string name="start_recording">已经开始录制视频</string>
    <string name="stop_recording">已经停止录制视频</string>
    <string name="video_locked">本段视频将移动到加锁视频中</string>
    <string name="file_uploading">照片上传中......</string>
    <string name="file_upload_success">照片上传成功</string>
    <string name="file_upload_failed">照片上传失败</string>
    <string name="file_saving">照片已存储</string>
    <string name="exception_exit">很抱歉,程序出现异常,即将退出.</string>
    
    <string name="backToStart_note">此操作会抹掉所有\n内容和设置，是否继续？</string>
    <string name="backToStart_yes">继续</string>
    <string name="formatcardpro">格式化储存卡将清空储存卡中所有数据</string>
     <string name="prompt">提示</string>
     <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="formatcard">格式化SD卡</string>
     <string name="backToStart">恢复出厂设置</string>
     <string name="off">OFF</string>
     <string name="no">NO</string>
     <string name="net_error">网络繁忙，请稍后再试</string>
    
</resources>
