<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/nav_highlight" />

        <ImageButton
            android:id="@+id/img_back_btn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:background="@color/colorTouming"
            android:src="@drawable/obd_data_back_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_title"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp" >

        <ListView
            android:id="@+id/car_model"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#7f6e6e6e"
            android:dividerHeight="0.5dp"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" >
        </ListView>

        <RelativeLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="125dp"
            android:background="@drawable/bg2"
            android:visibility="visible" >

            <ListView
                android:id="@+id/car_item"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:cacheColorHint="@android:color/transparent"
                android:divider="#7f6e6e6e"
                android:dividerHeight="0.5dp"
                android:fadingEdge="none"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"
                android:visibility="visible" >
            </ListView>

            <LinearLayout
                android:id="@+id/erase_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/erase_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/backToStart_note"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/erase_date_but"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/backToStart_yes"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>